// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip renders 1`] = `
<Tooltip
  id="renders"
  trigger="trigger"
>
  <span
    data-cy="tooltip"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    <Dropdownable
      dropdown={
        <TooltipContent
          id="renders"
          open={false}
        >
          content
        </TooltipContent>
      }
      open={false}
      preferredDirections={
        Array [
          "top",
          "top-start",
          "top-end",
          "bottom",
          "bottom-start",
          "bottom-end",
        ]
      }
    >
      <div>
        trigger
      </div>
    </Dropdownable>
  </span>
</Tooltip>
`;

exports[`Tooltip renders open tooltip 1`] = `
.emotion-2 {
  background-color: var(--themeBgPrimaryInverted,#1B2029);
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  position: relative;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2:after {
  position: absolute;
}

<Tooltip
  id="opened"
  open={true}
  trigger="trigger"
>
  <span
    data-cy="tooltip"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    <Dropdownable
      dropdown={
        <TooltipContent
          id="opened"
          open={true}
        >
          content
        </TooltipContent>
      }
      open={true}
      preferredDirections={
        Array [
          "top",
          "top-start",
          "top-end",
          "bottom",
          "bottom-start",
          "bottom-end",
        ]
      }
    >
      <div>
        trigger
      </div>
      <clickOutside(DropdownContents)
        open={true}
      >
        <DropdownContents
          open={true}
        >
          <ForwardRef
            style={
              Object {
                "left": "0",
                "position": "absolute",
                "top": "0",
                "zIndex": 2,
              }
            }
          >
            <Overlay
              innerRef={[Function]}
              overlayRoot={
                .emotion-2 {
  background-color: var(--themeBgPrimaryInverted,#1B2029);
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  position: relative;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2:after {
  position: absolute;
}

<body>
                  <div>
                    <div
                      style="z-index: 2; position: absolute; left: 0px; top: 0px;"
                    >
                      <div
                        aria-hidden="false"
                        class="
    emotion-0    emotion-1   inverseColorMode emotion-2"
                        data-cy="tooltipContent"
                        id="opened"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                </body>
              }
              style={
                Object {
                  "left": "0",
                  "position": "absolute",
                  "top": "0",
                  "zIndex": 2,
                }
              }
            >
              <Portal
                containerInfo={
                  <div>
                    <div
                      style="z-index: 2; position: absolute; left: 0px; top: 0px;"
                    >
                      <div
                        aria-hidden="false"
                        class="
    emotion-0    emotion-1   inverseColorMode emotion-2"
                        data-cy="tooltipContent"
                        id="opened"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                }
              >
                <div
                  style={
                    Object {
                      "left": "0",
                      "position": "absolute",
                      "top": "0",
                      "zIndex": 2,
                    }
                  }
                >
                  <TooltipContent
                    id="opened"
                    open={true}
                  >
                    <div
                      aria-hidden={false}
                      className="
    emotion-0    emotion-1   inverseColorMode emotion-2"
                      data-cy="tooltipContent"
                      id="opened"
                      role="tooltip"
                      style={
                        Object {
                          "maxWidth": undefined,
                          "minWidth": undefined,
                        }
                      }
                    >
                      content
                    </div>
                  </TooltipContent>
                </div>
              </Portal>
            </Overlay>
          </ForwardRef>
        </DropdownContents>
      </clickOutside(DropdownContents)>
    </Dropdownable>
  </span>
</Tooltip>
`;

exports[`Tooltip renders with preferred directions 1`] = `
.emotion-2 {
  background-color: var(--themeBgPrimaryInverted,#1B2029);
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  position: relative;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2:after {
  position: absolute;
}

<Tooltip
  id="customDir"
  open={true}
  preferredDirections={
    Array [
      "bottom-start",
    ]
  }
  trigger="trigger"
>
  <span
    data-cy="tooltip"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    <Dropdownable
      dropdown={
        <TooltipContent
          id="customDir"
          open={true}
        >
          content
        </TooltipContent>
      }
      open={true}
      preferredDirections={
        Array [
          "bottom-start",
        ]
      }
    >
      <div>
        trigger
      </div>
      <clickOutside(DropdownContents)
        open={true}
      >
        <DropdownContents
          open={true}
        >
          <ForwardRef
            style={
              Object {
                "left": "0",
                "position": "absolute",
                "top": "0",
                "zIndex": 2,
              }
            }
          >
            <Overlay
              innerRef={[Function]}
              overlayRoot={
                <body>
                  <div>
                    <div
                      data-popper-escaped="true"
                      data-popper-placement="top"
                      data-popper-reference-hidden="true"
                      style="z-index: 2; position: absolute; left: 0px; top: 0px; visibility: hidden; pointer-events: none; bottom: 0px; transform: translate(0px, 0px);"
                    >
                      <div
                        aria-hidden="false"
                        class="
    emotion-0    emotion-1   inverseColorMode emotion-2"
                        data-cy="tooltipContent"
                        id="opened"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                  .emotion-2 {
  background-color: var(--themeBgPrimaryInverted,#1B2029);
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  position: relative;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2:after {
  position: absolute;
}

<div>
                    <div
                      style="z-index: 2; position: absolute; left: 0px; top: 0px;"
                    >
                      <div
                        aria-hidden="false"
                        class="
    emotion-0    emotion-1   inverseColorMode emotion-2"
                        data-cy="tooltipContent"
                        id="customDir"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                </body>
              }
              style={
                Object {
                  "left": "0",
                  "position": "absolute",
                  "top": "0",
                  "zIndex": 2,
                }
              }
            >
              <Portal
                containerInfo={
                  <div>
                    <div
                      style="z-index: 2; position: absolute; left: 0px; top: 0px;"
                    >
                      <div
                        aria-hidden="false"
                        class="
    emotion-0    emotion-1   inverseColorMode emotion-2"
                        data-cy="tooltipContent"
                        id="customDir"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                }
              >
                <div
                  style={
                    Object {
                      "left": "0",
                      "position": "absolute",
                      "top": "0",
                      "zIndex": 2,
                    }
                  }
                >
                  <TooltipContent
                    id="customDir"
                    open={true}
                  >
                    <div
                      aria-hidden={false}
                      className="
    emotion-0    emotion-1   inverseColorMode emotion-2"
                      data-cy="tooltipContent"
                      id="customDir"
                      role="tooltip"
                      style={
                        Object {
                          "maxWidth": undefined,
                          "minWidth": undefined,
                        }
                      }
                    >
                      content
                    </div>
                  </TooltipContent>
                </div>
              </Portal>
            </Overlay>
          </ForwardRef>
        </DropdownContents>
      </clickOutside(DropdownContents)>
    </Dropdownable>
  </span>
</Tooltip>
`;
